# Karatla_Api

./: .gitignore  README.md
web-api/: .env  Cargo.toml
web-api/migrations/2020-09-07-024822_accounts/: down.sql  up.sql
web-api/src/: database_actions.rs  database_actions_account.rs  database_actions_vallidation.rs  doc.md  lib.rs  models_account.rs  models_validation.rs  ssl_config.rs  web_rount.rs
web-api/static/: .env
web_api/: .env  Cargo.toml
web_api/migrations/2020-09-07-024822_accounts/: up.sql
web_api/src/: configure.rs  database_actions.rs  database_actions_account.rs  database_actions_validation.rs  database_actions_vallidation.rs  lib.rs  models_account.rs  models_http.rs  models_validation.rs  schema.rs  type_file.rs  web_rount.rs
web_api/static/: .env  doc.md  karatla_ssl_key.key  karatla_ssl_pem.pem
web_api/static/assets/json/: academy_en.html  question_en.html
web_api2/: Cargo.toml
web_api2/src/: main.rs
