[package]
name = "web-api"
version = "0.1.0"
authors = ["July <3164926@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
actix-web = { version = "3.1.0", features = ["rustls"] }
actix-rt = "1.1.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
chrono = "0.4.15"
rand = "0.7.3"
tokio = "0.2.22"
rustls = "0.18.1"
actix-files = "0.4.0"