[package]
name = "web_api"
version = "0.1.0"
authors = ["Karatla <3164926@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
actix-web = { version = "3.2.0", features = ["rustls"] }
actix-rt = "1.1.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = "0.4.19"
rand = "0.7.3"
tokio = { version = "0.3.3", features = ["rt", "time", "rt-multi-thread"]}
rustls = "0.18.1"
actix-files = "0.4.0"
actix-cors = "0.5.4"